Update: Fixing the items grid on tablet+

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 }
 
 h1 {
@@ -42,6 +42,7 @@ h1 {
   letter-spacing: -0.02em;
   font-family: inherit;
   margin-top: 0;
+  line-height: 1.15;
 }
 
 .title-icon {
@@ -162,35 +163,38 @@ input[type="text"]:not(.form-input-filter):focus {
 /* Items */
 
 .items {
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
+  margin-top: 1.5rem;
   padding: 0;
+  display: grid;
+  gap: 0 .5rem;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, auto));
 }
 
 .items li {
   display: flex;
   justify-content: space-between;
-  width: 45%;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 10px 15px;
+  padding: .85rem 1rem;
   margin: 0 0 .5rem;
   font-weight: 700;
   transition: outline .2s ease-out;
   outline: 0px solid  rgba(0, 0, 0, 0);
   background-color: #FFFFFF;
+  align-items: flex-start;
+  line-height: 1.3;
 }
 
 .items li i, button i {
   font-size: 1rem;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .items li {
     width: 100%;
   }
-}
+} */
 
 /* Edit mode */
 body {
@@ -259,7 +263,7 @@ body.edit-mode {
 }
 
 .modal h1 {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .modal footer {
